--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -50,3 +50,53 @@
        font-size: 14px;
     }
 }
+.search{
+    
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    min-height: 533px;
+    color: #fff;
+    text-align: center;
+}
+.search__inner{
+    padding: 155px 0px 100px;
+    &-title{
+      margin-bottom: 10px;
+      font-size: 48px;
+      font-weight: 700;
+      line-height: 72px;
+    }
+    &-text{
+      margin-bottom: 50px;
+      font-size: 20px;
+      font-weight: 500;
+      line-height: 30px;
+    }
+    &-form{
+        max-width: 670px;
+        margin: 0 auto;
+        position: relative;
+        input{
+        width: 100%;
+        box-shadow: 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
+        height: 56px;
+        border: none;
+        font-size: 14px;
+        font-weight: 500px;
+        padding-left: 25px;
+        padding-right: 60px;
+        &::placeholder{
+            color: #98a4ae;
+            font-weight: 500;
+        }
+    }
+    button{
+        position: absolute;
+        border: none;
+        background-color: transparent;
+        right: 20px;
+        top: 16px;
+    }
+    }
+}
